<resources>
    <string name="app_name">PhoneBook</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_a_member_login">Already a member!! Login</string>
    <string name="login">Login</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_contact">Save Contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
</resources>
