<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jump360.palakbhootra.phonebook.LogIn">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <EditText
            android:id="@+id/editTextLogEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="154dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextLogPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextLogEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextLogPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnLinkToRegister"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="Not a member Register Now" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
